--- a/example/package.json
+++ b/example/package.json
@@ -13,7 +13,8 @@
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
     "gh-pages": "^3.1.0",
-    "typescript": "^4.0.5"
+    "typescript": "^4.0.5",
+    "yaml.macro": "^0.1.1"
   },
   "scripts": {
     "predeploy": "npm run build",
