--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "Apache-2.0",
   "types": "dist/index.d.ts",
   "devDependencies": {
+    "@types/dagre": "^0.7.44",
     "@types/react": "^16.9.55",
     "@types/react-dom": "^16.9.9",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
@@ -48,5 +49,9 @@
   },
   "files": [
     "dist"
-  ]
+  ],
+  "dependencies": {
+    "dagre": "^0.8.5",
+    "react-flow-renderer": "^8.3.7"
+  }
 }
