--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,8 @@
     "strict": true,
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
-    "noUnusedParameters": true,
-    "strictNullChecks": true,
+    "noUnusedParameters": false,
+    "strictNullChecks": false,
     "moduleResolution": "node",
     "noImplicitAny": true,
     "outDir": "./dist",
