--- a/example/package.json
+++ b/example/package.json
@@ -13,8 +13,7 @@
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
     "gh-pages": "^3.1.0",
-    "typescript": "^3.8.3",
-    "yaml.macro": "^0.1.1"
+    "typescript": "^3.8.3"
   },
   "scripts": {
     "predeploy": "npm run build",
