--- a/package.json
+++ b/package.json
@@ -51,7 +51,10 @@
     "dist"
   ],
   "dependencies": {
+    "@kubernetes-models/sealed-secrets": "^1.0.3",
     "dagre": "^0.8.5",
+    "kubernetes-models": "^1.0.3",
+    "rc-simple-tooltip": "^1.3.14",
     "react-flow-renderer": "^8.2.1"
   }
 }
