--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "build:clean": "rm -rf ./dist/*",
     "test": "jest",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "lint": "eslint ."
   },
   "license": "Apache-2.0",
   "devDependencies": {
     "@babel/core": "^7.11.6",
+    "@socialgouv/eslint-config-react": "^1.46.0",
     "@storybook/addon-actions": "^6.0.22",
     "@storybook/addon-essentials": "^6.0.22",
     "@storybook/addon-links": "^6.0.22",
@@ -23,9 +25,12 @@
     "@testing-library/react": "^10.0.4",
     "@types/jest": "^25.2.1",
     "@types/react": "^16.9.27",
+    "@typescript-eslint/eslint-plugin": "^4.14.0",
+    "@typescript-eslint/parser": "^4.14.0",
     "babel-loader": "^8.1.0",
+    "eslint": "^7.18.0",
     "jest": "^25.5.3",
-    "prettier": "^2.0.2",
+    "prettier": "^2.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-is": "^16.13.1",
@@ -50,6 +55,7 @@
     ]
   },
   "dependencies": {
+    "@types/dagre": "^0.7.44",
     "dagre": "^0.8.5",
     "react-flow-renderer": "^8.4.1"
   }
