--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,11 +55,11 @@ jobs:
 
       - uses: actions/checkout@v2
 
-      - name: Download dist form build job
+      - name: Download dist from build job
         uses: actions/download-artifact@v2
         with:
           name: build
-          path: .
+          path: dist
 
       - name: Semantic Release
         uses: cycjimmy/semantic-release-action@v2
