--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,6 +64,7 @@ jobs:
       - name: Semantic Release
         uses: cycjimmy/semantic-release-action@v2
         with:
+          dry_run: true
           extra_plugins: |
             @semantic-release/changelog
             @semantic-release/exec
