--- a/package.json
+++ b/package.json
@@ -46,6 +46,9 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "jest": {
     "transform": {
       ".(ts|tsx)": "ts-jest"
