--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test": "jest",
     "dev": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "lint": "eslint ."
+    "lint": "eslint ./src"
   },
   "license": "Apache-2.0",
   "devDependencies": {
