--- a/package.json
+++ b/package.json
@@ -19,20 +19,23 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@babel/core": "^7.11.6",
+    "@juggle/resize-observer": "^3.2.0",
     "@socialgouv/eslint-config-react": "^1.46.0",
     "@storybook/addon-actions": "^6.0.22",
     "@storybook/addon-essentials": "^6.0.22",
     "@storybook/addon-links": "^6.0.22",
+    "@storybook/addon-storyshots": "^6.1.17",
     "@storybook/addon-storysource": "^6.1.14",
     "@storybook/react": "^6.0.22",
-    "@testing-library/react": "^10.0.4",
+    "@testing-library/react": "^11.2.5",
     "@types/jest": "^25.2.1",
     "@types/react": "^16.9.27",
     "@typescript-eslint/eslint-plugin": "^4.14.0",
     "@typescript-eslint/parser": "^4.14.0",
     "babel-loader": "^8.1.0",
     "eslint": "^7.18.0",
-    "jest": "^25.5.3",
+    "jest": "^26.6.3",
+    "jest-extended": "^0.11.5",
     "kubernetes-models": "^1.0.3",
     "prettier": "^2.2.1",
     "react": "^16.13.1",
@@ -58,7 +61,11 @@
     "moduleFileExtensions": [
       "ts",
       "tsx",
-      "js"
+      "js",
+      "json"
+    ],
+    "setupFilesAfterEnv": [
+      "<rootDir>/src/setupTest.ts"
     ]
   },
   "dependencies": {
