--- a/package.json
+++ b/package.json
@@ -12,39 +12,47 @@
     "build:ts": "npx rollup -c",
     "build:clean": "rm -rf ./dist/*",
     "test": "jest",
-    "dev": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
+    "dev": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
     "lint": "eslint ./src"
   },
   "license": "Apache-2.0",
   "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@juggle/resize-observer": "^3.2.0",
-    "@socialgouv/eslint-config-react": "^1.46.0",
-    "@storybook/addon-actions": "^6.0.28",
-    "@storybook/addon-essentials": "^6.0.28",
-    "@storybook/addon-links": "^6.0.28",
-    "@storybook/addon-storyshots": "^6.1.21",
-    "@storybook/addon-storysource": "^6.1.21",
-    "@storybook/react": "^6.0.28",
+    "@babel/core": "^7.22.9",
+    "@babel/preset-env": "^7.22.9",
+    "@babel/preset-react": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.5",
+    "@juggle/resize-observer": "^3.4.0",
+    "@rollup/plugin-json": "^6.0.0",
+    "@rollup/plugin-typescript": "^11.1.2",
+    "@socialgouv/eslint-config-react": "^1.131.0",
+    "@storybook/addon-actions": "^7.1.1",
+    "@storybook/addon-essentials": "^7.1.1",
+    "@storybook/addon-links": "^7.1.1",
+    "@storybook/addon-storyshots": "^7.1.1",
+    "@storybook/addon-storysource": "^7.1.1",
+    "@storybook/react": "^7.1.1",
+    "@storybook/react-webpack5": "^7.1.1",
     "@testing-library/react": "^11.2.7",
     "@types/jest": "^25.2.3",
-    "@types/react": "^16.14.21",
-    "@typescript-eslint/eslint-plugin": "^4.14.2",
-    "@typescript-eslint/parser": "^4.14.2",
-    "babel-loader": "^8.2.3",
-    "eslint": "^7.18.0",
+    "@types/react": "^18.2.16",
+    "@typescript-eslint/eslint-plugin": "^6.2.0",
+    "@typescript-eslint/parser": "^6.2.0",
+    "babel-loader": "^9.1.3",
+    "eslint": "^8.45.0",
+    "eslint-plugin-storybook": "^0.6.13",
     "jest": "^26.6.3",
     "jest-extended": "^0.11.5",
     "kubernetes-models": "^1.0.3",
-    "prettier": "^2.2.1",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "react-is": "^16.13.1",
+    "prettier": "^3.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-is": "^18.2.0",
     "rollup": "^2.2.0",
-    "rollup-plugin-typescript2": "^0.27.3",
+    "storybook": "^7.1.1",
     "ts-jest": "^25.5.1",
-    "typescript": "^3.9.10"
+    "tslib": "^2.6.1",
+    "typescript": "^5.1.6"
   },
   "peerDependencies": {
     "react": "^16.14.0",
@@ -69,7 +77,7 @@
     ]
   },
   "dependencies": {
-    "@types/dagre": "^0.7.46",
+    "@types/dagre": "^0.7.49",
     "dagre": "^0.8.5",
     "react-flow-renderer": "^9.6.11"
   }
