--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@typescript-eslint/parser": "^6.2.0",
     "babel-loader": "^9.1.3",
     "eslint": "^8.45.0",
+    "eslint-plugin-prettier": "5",
     "eslint-plugin-storybook": "^0.6.13",
     "jest": "^26.6.3",
     "jest-extended": "^0.11.5",
