--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "@storybook/addon-storysource": "^7.1.1",
     "@storybook/react": "^7.1.1",
     "@storybook/react-webpack5": "^7.1.1",
-    "@testing-library/react": "^11.2.7",
-    "@types/jest": "^25.2.3",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.3",
     "@types/react": "^18.2.16",
     "@typescript-eslint/eslint-plugin": "^6.2.0",
     "@typescript-eslint/parser": "^6.2.0",
@@ -42,16 +42,16 @@
     "eslint": "^8.45.0",
     "eslint-plugin-prettier": "5",
     "eslint-plugin-storybook": "^0.6.13",
-    "jest": "^26.6.3",
-    "jest-extended": "^0.11.5",
+    "jest": "^29.6.1",
+    "jest-extended": "^4.0.0",
     "kubernetes-models": "^1.0.3",
     "prettier": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
-    "rollup": "^2.2.0",
+    "rollup": "^3.26.3",
     "storybook": "^7.1.1",
-    "ts-jest": "^25.5.1",
+    "ts-jest": "^29.1.1",
     "tslib": "^2.6.1",
     "typescript": "^5.1.6"
   },
@@ -64,7 +64,10 @@
   },
   "jest": {
     "transform": {
-      ".(ts|tsx)": "ts-jest"
+      ".(ts|tsx)": [
+        "ts-jest",
+        {}
+      ]
     },
     "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
     "moduleFileExtensions": [
@@ -75,7 +78,8 @@
     ],
     "setupFilesAfterEnv": [
       "<rootDir>/src/setupTest.ts"
-    ]
+    ],
+    "preset": "ts-jest"
   },
   "dependencies": {
     "@types/dagre": "^0.7.49",
